                           |

 ** The following functions were deprecated in Octave 4.4 and have been
    removed from Octave 6.0.

      Function             | Replacement
      ---------------------|------------------
      chop                 | sprintf for visual results
      desktop              | isguirunning
      tmpnam               | tempname
      toascii              | double
      java2mat             | __java2mat__

 ** Deprecated graphics properties.

    The following properties or allowed corresponding values have been
    deprecated in Octave 6.0 and will be removed from Octave 8 (or
    whatever version is the second major release after 6.0):

      Object               | Property                | Value
      ---------------------|-------------------------|-------------------


 ** The following properties or allowed corresponding values were
    deprecated in Octave 4.4 and have been removed from Octave 6.0:

      Object               | Property                | Value
      ---------------------|-------------------------|-------------------
      figure               | doublebuffer            |
                           | mincolormap             |
                           | wvisual                 |
                           | wvisualmode             |
                           | xdisplay                |
                           | xvisual                 |
                           | xvisualmode             |
      axes                 | drawmode                |
      annotation           | edgecolor ("rectangle") |
      text                 | fontweight              | "demi" and "light"
      uicontrol            | fontweight              | "demi" and "light"
      uipanel              | fontweight              | "demi" and "light"
      uibuttongroup        | fontweight              | "demi" and "light"

---------------------------------------------------------

See NEWS.5 for old news.