@@ -54,6 +54,7 @@ Summary of important user-visible changes for version 6.0 (yyyy-mm-dd):
       uicontrol            | fontweight              | "demi" and "light"
       uipanel              | fontweight              | "demi" and "light"
       uibuttongroup        | fontweight              | "demi" and "light"
+      uitable              | fontweight              | "demi" and "light"
 
 ---------------------------------------------------------
 
